--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.7.0
 click==8.1.7
 crefi==2.0.9
 Flask==3.0.2
+Flask-Cors==3.0.10
 flask-openapi3==2.1.0
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.1.2
@@ -11,6 +12,7 @@ MarkupSafe==2.1.5
 mysql-connector-python==8.0.28
 protobuf==5.26.1
 pydantic==1.10.2
+six==1.16.0
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
 Werkzeug==3.0.2
